{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "ActionMap",
            "id": "c9c4f5ab-ebbc-4b7c-bbae-10c5839a23d5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "a8cb8abf-b70a-4286-b5c4-0be0bf180ced",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "59233ea5-1927-4e62-8641-f4b615e5cca6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCamera",
                    "type": "Button",
                    "id": "27fc3cd0-ec95-445c-8b65-ed31c504e588",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "be0daf1f-f848-4470-b97f-ca76586106f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Swap",
                    "type": "Button",
                    "id": "ae497d11-f0c5-43d5-827a-abad8586c9b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd8c7ce8-ebc4-4390-bf3b-bdddc1c4b03b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1945fac-bfed-42c6-9581-0505a819d191",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29924483-6119-467a-acc0-648ecb53ba66",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aba0fa7f-97aa-44a5-83e3-6afe88a525cf",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b95024ab-a4b8-483b-9284-d93906cb783a",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}